<resources>
    <string name="app_name">TripIN</string>


    <string name="app_contact">Contactez-nous</string>
    <string name="app_sharing">Partagez notre application</string>
    <string name="app_stars">Notez-nous</string>
    <string name="app_preferences">Choisissez vos préférences</string>
    <string name="connexion_button_profil">Profil</string>
    <string name="pseudo_edit">Pseudo</string>
    <string name="mail_edit">Mail</string>
    <string name="password_edit">Mot de passe</string>
    <string name="register_button">Se connecter</string>
    <string name="account_text">J\'ai déjà un compte ?</string>
    <string name="signin_button">Se connecter</string>
    <string name="signout_button">Se deconnecter</string>
    <string name="signup_button">S\'inscrire</string>
    <string name="create_account_button">Vous n\'avez pas encore de compte ? Créez-en un !</string>
    <string name="photo_profil_button">Photo</string>
    <string name="voyage_delete_confirm_title">Confirmation Supression</string>
    <string name="voyage_delete_confirm_message">Voulez-vous vraiment supprimer %1$s ?</string>
    <string name="search">Rechercher</string>
    <string name="noFlightsAvailable">Veuillez essayer une autre date ou modifier votre recherche</string>
    <string name="noSavedFlights">Pour en ajouter, cliquez sur l\'image ci-dessous</string>
    <string name="favFlight_description">Bouton ajout favoris</string>
    <string name="logo_vol_retour">Logo vol retour</string>
    <string name="logo_vol_aller">Logo vol aller</string>
    <string name="radioButton_aller_retour">Aller-retour</string>
    <string name="radioButton_aller_simple">Aller simple</string>
    <string name="editText_date_depart">Date de départ</string>
    <string name="editText_date_retour">Date de retour</string>
    <string name="autoCompleteTextView_lieu_depart">Lieu de départ</string>
    <string name="autoCompleteTextView_lieu_arrivee">Lieu d\'arrivée</string>
    <string name="textView_nombre_passagers">Passagers</string>
    <string name="textView_nombre_voyageurs">Voyageurs</string>
    <string name="button_searchFlight">Rechercher</string>
    <string name="textView_aucun_vol_disponible">Aucun vol disponible</string>
    <string name="imageDescription_no_flights">Aucun vol trouvé</string>
    <string name="textView_aucun_vol_favori">Aucun vol favori</string>
    <string name="imageDescription_no_favoriteFlight">Aucun vol favori</string>
    <string name="travelClass">Classe</string>
    <string name="editText_voyage_Titre">Titre</string>
    <string name="nombre_de_voyageur">Nombre de voyageur(s) :</string>


    <string-array name="passengersNumber">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="catDestination">
        <item>Exotique</item>
        <item>Au soleil</item>
        <item>Pour skier</item>
        <item>Pour découvrir</item>
        <item>A la plage</item>
        <item>Pour visiter</item>
    </string-array>

    <string-array name="catActivity">
        <item>Musée et art</item>
        <item>Sport et aventure</item>
        <item>Vin et gastronomie</item>
        <item>Vie nocture</item>
        <item>Divertissement</item>
        <item>Activités et visites</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connexion_facebook">Connectez-vous à facebook</string>
    <string name="connexion_twitter">Connectez-vous à twitter</string>
    <string name="adresses_destinataires">Adresse(s) destinataire(s)</string>
    <string name="objet">Objet</string>
    <string name="message">Message</string>
    <string name="envoyer_le_mail">Envoyer le mail</string>
    <string name="notez_notre_application">Notez notre application :</string>
    <string name="valider">Valider</string>
    <string name="contact_entete_textview">Veuillez remplir ce formulaire en explicitant votre problème. Une zone de texte est prévu à cet effet. Veuillez l\'adresser au mail suivant :</string>
    <string-array name="travelClass">
        <item>ECONOMY</item>
        <item>PREMIUM ECO</item>
        <item>BUSINESS</item>
        <item>FIRST</item>
    </string-array>
</resources>
