<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/pseudo_edit_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/pseudo_edit"
        android:ems="10"
        android:hint="@string/pseudo_edit"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_profil_button" />

    <EditText
        android:id="@+id/mail_edit_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/mail_edit"
        android:ems="10"
        android:hint="@string/mail_edit"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/pseudo_edit_registration"
        app:layout_constraintTop_toBottomOf="@+id/pseudo_edit_registration" />

    <EditText
        android:id="@+id/password_edit_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/password_edit"
        android:ems="10"
        android:hint="@string/password_edit"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/mail_edit_registration"
        app:layout_constraintTop_toBottomOf="@+id/mail_edit_registration" />

    <Button
        android:id="@+id/register_button_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_registration" />

    <TextView
        android:id="@+id/account_text_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/account_text"
        app:layout_constraintStart_toStartOf="@+id/register_button_registration"
        app:layout_constraintTop_toBottomOf="@+id/register_button_registration" />

    <Button
        android:id="@+id/photo_profil_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/photo_profil_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>