<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profil.ProfilFragment"
    android:orientation="vertical">
    
    <LinearLayout
        android:id="@+id/first_linear_layout_profil_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/auth_button_profil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:drawableTop="@drawable/ic_person_black_24dp"
            android:layout_marginStart="5dp"
            android:text="@string/connexion_button_profil"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/signout_button_profil"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="end"
            android:layout_marginStart="250dp"
            android:text="@string/signout_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_linear_layout_profil_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/display_photo_circleview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_person_black_24dp"
            app:civ_border_width="4dp"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="@color/black"/>

        <TextView
            android:id="@+id/username_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connectez-vous"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview_app_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_contact"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textview_app_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_preferences"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textview_app_stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_stars"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textview_app_sharing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_sharing"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>