<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".profil.ContactActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/contrast_blue"
        android:layout_marginTop="30dp"
        android:text="Une question ? Une remarque ? Envoyez-nous un mail ! "/>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/contact_entete_textview"
        android:textSize="15sp"
        android:textStyle="italic"
    />

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    android:minHeight="300dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/destinataire_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/adresses_destinataires"
            android:autofillHints="@string/adresses_destinataires"
            android:textSize="14sp"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/objet_edit_text"
            android:hint="@string/objet"
            android:autofillHints="@string/objet"
            android:inputType="text"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/message_edit_text"
            android:hint="@string/message"
            android:autofillHints="@string/message"
            android:padding="5dp"
            android:minHeight="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_message"
            android:gravity="start"
            android:textSize="14sp"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/envoyer_button"
        android:layout_width="200dp"
        android:layout_gravity="end"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/envoyer_le_mail"
        android:textColor="@color/colorBackground"
        android:padding="5dp" />


</LinearLayout>