<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/savedTopLevel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".SavedFlight">


    <RelativeLayout
        android:id="@+id/layoutNoSavedFlight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/noSavedFlightAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/textView_aucun_vol_favori"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noSavedFlightDetail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/noSavedFlightAvailable"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/noSavedFlights"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/noFlightsImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/noSavedFlightDetail"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/imageDescription_no_favoriteFlight"
            android:gravity="center"
            android:src="@drawable/nosavedflights" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/savedFlights_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/flights_view" />

    </RelativeLayout>

</LinearLayout>