<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/global_layout"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:id="@+id/card_layout"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/contrast_blue"
        app:layout_constraintBottom_toBottomOf="@id/global_layout"
        app:layout_constraintTop_toTopOf="@id/global_layout"
        app:layout_constraintLeft_toLeftOf="@id/global_layout"
        app:layout_constraintRight_toRightOf="@id/global_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="Adresse mail : "/>

            <EditText
                android:id="@+id/mail_edittext_login"
                android:layout_width="match_parent"

                android:layout_height="50dp"
                android:autofillHints="@string/mail_edit"
                android:hint="Entrez votre e-mail"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:background="@drawable/rounded_edit"
                android:textStyle="bold"
                android:paddingStart="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="Mot de passe : "/>

            <EditText
                android:id="@+id/password_edittext_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="@string/mail_edit"
                android:hint="Entrez votre mot de passe"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:background="@drawable/rounded_edit"
                android:textStyle="bold"
                android:paddingStart="10dp" />


            <Button
                android:id="@+id/signin_button_login"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/signin_button"
                android:textColor="@color/colorBackground"
                android:textStyle="bold"
                android:padding="5dp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/back_account_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/global_layout"
        app:layout_constraintStart_toStartOf="@id/global_layout"
        app:layout_constraintTop_toBottomOf="@+id/card_layout" />




</androidx.constraintlayout.widget.ConstraintLayout>